--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -22,6 +22,7 @@
 .form-control,
 .form-control:focus {
   border-radius: 15px;
+  margin: 5px;
 }
 
 .invalid-input,
@@ -64,6 +65,7 @@
   box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
   outline: none;
   width: 100%;
+  margin: 5px;
   border-radius: 20px;
 }
 .slider::-webkit-slider-thumb {
