--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -24,6 +24,7 @@
 .form-control:focus {
   border-radius: 15px;
   margin: 5px;
+  box-shadow: 0 0 11px rgba(33, 33, 33, 0.2);
 }
 
 .invalid-input,
